# qrencode

./: .gitignore  CMakeLists.txt  QREncode.cpp  QREncode.vcxproj  QREncode.vcxproj.filters  QREncoder.cpp  QREncoder.h  libqrcode.sln  libqrcode.vcxproj  libqrcode.vcxproj.filters  stdafx.cpp
examples/: CMakeLists.txt
examples/QREncodeExport/: CMakeLists.txt
examples/RenderWithOpenGL/: CMakeLists.txt  main.cpp
lib/: FreeImage.lib  FreeImaged.lib
media/: QREncode.frag  QREncode.vert
source/: config.h  mask.c  qrcodelib.def  qrencode.c
src/: CMakeLists.txt  config.h.in  mqrspec.c
src/source/: mmask.c  qrspec.c  rscode.c  split.c
